# project2txt

./: .flake8  .gitignore  GEMINI.md  README.md  ROADMAP.md  git_automate.py  pyproject.toml  pyproject2txt.sh
src/txt2llm/: config.py  core.py  main.py  utils.py
src/txt2llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_core.py  test_main.py  test_utils.py
